[package]
name = "defi_arbitrageur"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0.14", features = ["ws"] }
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.100"
futures = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
once_cell = "1.21.3"
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
dotenv = "0.15.0"
num-bigint = "0.4"
num-traits = "0.2"
